[project]
name = "sslt"
description = "Terminal UI for SSL certificate creation, inspection, export, import, CSR generation, and local CA management."
readme = "README.md"
authors = [
    { name = "Luke Parker", email = "distributednormally@gmail.com" }
]
requires-python = ">=3.12"
dynamic = ["version"]
license = "GPL-3.0-only"
keywords = ["ssl", "tls", "certificate", "openssl", "tui", "textual", "csr", "pki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=47.0.0",
    "textual>=8.2.5",
]

[project.urls]
Homepage = "https://github.com/fivepoint-0/sslt"
Repository = "https://github.com/fivepoint-0/sslt"
Issues = "https://github.com/fivepoint-0/sslt/issues"

[project.scripts]
sslt = "sslt:main"

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/sslt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sslt"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
